contrast fixes

--- a/webpages/styles/colors-light.css
+++ b/webpages/styles/colors-light.css
@@ -3,7 +3,7 @@
   --green-text: var(--green);
   --blue-text: var(--blue);
 
-  --page-background: #f5f5f5;
+  --page-background: #efefef;
   --content-background: #ffffff;
   --navigation-background: #ecebeb;
   --search-toolbar-background: #f5f5f5;
