--- a/webpages/styles/colors.css
+++ b/webpages/styles/colors.css
@@ -18,7 +18,7 @@
   --dark-red-text: var(--dark-red-variant);
   --white-text: #fff;
 
-  --page-background: #1c1c1c;
+  --page-background: #1a1a1a;
   --content-background: #252525;
   --navigation-background: #333;
   --search-toolbar-background: #1c1c1c;
